--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,7 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
@@ -70,8 +71,10 @@ body {
 
 @layer base {
   * {
-    @apply border-border; /* Ensure this class is defined */
+    @apply border-border;
+    /* Ensure this class is defined */
   }
+
   body {
     @apply bg-background text-foreground;
   }
